--- a/navbar_1/stylesheet.css
+++ b/navbar_1/stylesheet.css
@@ -1,8 +1,3 @@
-
-
-/* Please ❤ this if you like it! */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap');
 
@@ -21,6 +16,7 @@ body{
   height: 100vh;
   width: 100%;
 }
+
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked){
   position: absolute;
@@ -138,23 +134,23 @@ body{
               right 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
               transform 250ms 700ms ease,
               width 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1);display: flex;
-              align-items: center;
-              justify-content: center;
+              height 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-
-.nav ul {
-  display: flex;
-  flex-direction: column;
+.nav ul{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  display: block;
   width: 100%;
   padding: 0;
   margin: 0;
   z-index: 6;
   text-align: center;
+  transform: translateY(-50%);
   list-style: none;
 }
-.nav ul li {
+.nav ul li{
   position: relative;
   display: block;
   width: 100%;
@@ -163,27 +159,28 @@ body{
   text-align: center;
   list-style: none;
   pointer-events: none;
+  opacity: 0;
   visibility: hidden;
   transform: translateY(30px);
   transition: all 250ms linear;
 }
-.nav ul li:nth-child(1) {
+.nav ul li:nth-child(1){
   transition-delay: 250ms;
 }
-.nav ul li:nth-child(2) {
+.nav ul li:nth-child(2){
   transition-delay: 200ms;
 }
-.nav ul li:nth-child(3) {
+.nav ul li:nth-child(3){
   transition-delay: 150ms;
 }
-.nav ul li:nth-child(4) {
+.nav ul li:nth-child(4){
   transition-delay: 100ms;
 }
-.nav ul li:nth-child(4) {
+.nav ul li:nth-child(4){
   transition-delay: 50ms;
 }
-.nav ul li a {
-  font-family: "Londrina Outline", cursive;
+.nav ul li a{
+  font-family: 'Londrina Outline', cursive;
   font-size: 9vh;
   text-transform: uppercase;
   line-height: 1.2;
@@ -193,15 +190,15 @@ body{
   color: #ececee;
   transition: all 250ms linear;
 }
-.nav ul li a:hover {
+.nav ul li a:hover{
   text-decoration: none;
   color: #ffeba7;
 }
-.nav ul li a:after {
+.nav ul li a:after{
   display: block;
   position: absolute;
   top: 50%;
-  content: "";
+  content: '';
   height: 2vh;
   margin-top: -1vh;
   width: 0;
@@ -210,41 +207,47 @@ body{
   opacity: 0.5;
   transition: width 250ms linear;
 }
-.nav ul li a:hover:after {
+.nav ul li a:hover:after{
   width: 100%;
 }
 
-.menu-icon:checked ~ .nav ul li {
+
+.menu-icon:checked ~ .nav  ul li {
   pointer-events: auto;
   visibility: visible;
+  opacity: 1;
   transform: translateY(0);
-  transition: opacity 350ms ease, transform 250ms ease;
+  transition: opacity 350ms ease,
+              transform 250ms ease;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(1) {
+.menu-icon:checked ~ .nav ul li:nth-child(1){
   transition-delay: 1400ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(2) {
+.menu-icon:checked ~ .nav ul li:nth-child(2){
   transition-delay: 1480ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(3) {
+.menu-icon:checked ~ .nav ul li:nth-child(3){
   transition-delay: 1560ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(4) {
+.menu-icon:checked ~ .nav ul li:nth-child(4){
   transition-delay: 1640ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(5) {
+.menu-icon:checked ~ .nav ul li:nth-child(5){
   transition-delay: 1720ms;
 }
 
+
+
+
 @media screen and (max-width: 991px) {
   .menu-icon:checked + label,
-  .menu-icon:not(:checked) + label {
+  .menu-icon:not(:checked) + label{
     right: 55px;
   }
-  .nav {
+  .nav{
     right: 30px;
   }
-  h1 {
+  h1{
     font-size: 9vw;
     -webkit-text-stroke: 2px transparent;
     text-stroke: 2px transparent;
@@ -252,7 +255,7 @@ body{
     text-fill-color: #ffeba7;
     color: #ffeba7;
   }
-  .nav ul li a {
+  .nav ul li a{
     font-size: 8vh;
   }
 }
