Corrected background pic problem
Line 19
Changed background-size: 100vw; to background-size: cover;

--- a/mainpage/stylesheet.css
+++ b/mainpage/stylesheet.css
@@ -16,7 +16,7 @@ html{
 
 body {
 	background: url("old_library.jpeg") no-repeat;
-	background-size: 100vw;
+	background-size: cover;
 	background-attachment: fixed;
 	padding: 3vw;
 }
