--- a/mainpage/stylesheet.css
+++ b/mainpage/stylesheet.css
@@ -12,35 +12,42 @@
 /* CSS of entire contents of webpage */
 html{
     scroll-behavior: smooth;
+	font-size: 6;
 }
 
 body {
 	background: url("old_library.jpeg") no-repeat;
-	background-size: 100vw;
+	background-size: 100vw 100vh;
 	background-attachment: fixed;
-	padding: 3vw;
+	padding: 1rem;
 }
 
 .header{
-    font-size: 3vw;
+    font-size: 3.5rem;
     font-family: 'Teko', sans-serif;
     color: #3effda;
 }
 
-.text{
-	font-size: 1vw;
+span.text{
+	font-size: 0.6rem;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
+	line-height: 0.9rem!important;
 }
 
 .para{
+	min-width: calc(325px - 1rem - 10px);display: flex;
+    flex-direction: column wrap;
+    flex-flow: column wrap;
+    align-content: center;
+    justify-content: space-evenly;
 	width: 50%;
     border-left-style: solid;
-    border-width: 7px;
+    border-width: 0.7rem;
     border-color: white;
-	background-color: rgba(3,21,36,0.8);
+	background-color: rgba(40, 81, 114, 0.8);
 	margin: 0;
-	padding: 5vw;
+	padding: 1rem;
 	position: absolute;
 	top: 50%;
 	-ms-transform: translateY(-50%);
@@ -56,10 +63,10 @@ body {
 img {
 	object-fit: cover;
 	width: 100%;
-	box-shadow: 10 10 10px 10px white inset;
+	box-shadow: 1rem 1rem 1rem white inset;
 }
 #carousel_pics {
-	margin: 90px;
+	margin: 9rem;
 	position: relative;
 }
 
