--- a/mainpage-2/stylesheet.css
+++ b/mainpage-2/stylesheet.css
@@ -55,31 +55,14 @@ span.text{
 	transform: translateY(-50%);
 }
 
-/*
-.carousel-inner .carousel-item {
-	transition: -webkit-transform 1.3s ease;
-	transition: transform 1.3s ease;
-	transition: transform 1.3s ease, -webkit-transform 1.3s ease;
-}
-img {
-	object-fit: cover;
-	width: 100%;
-	box-shadow: 1rem 1rem 1rem white inset;
-}
-#carousel_pics {
-	margin: 9rem;
-	position: relative;
-}*/
+.mySlides {display: none}
+img {vertical-align: middle;}
+
 /* Slideshow container */
 .slideshow-container {
-  width: 70%;
-  height: fixed;
+  max-width: 1000px;
   position: relative;
   margin: auto;
-}
-
-.mySlides {
-	display: none;
 }
 
 /* Next & previous buttons */
@@ -110,17 +93,15 @@ img {
 }
 
 /* Caption text */
-.captiontext {
-  color: #31cf88;
-  background-color: rgba(255,255,255,0.75);
-  font-weight: 700;
+/* .text {
+  color: #f2f2f2;
   font-size: 15px;
-  padding: 8px 0px;
+  padding: 8px 12px;
   position: absolute;
-  bottom: 5%;
+  bottom: 8px;
   width: 100%;
   text-align: center;
-}
+} */
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -129,11 +110,6 @@ img {
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
-
-.numbertext img {
-	vertical-align: middle;
-	object-fit: cover;
 }
 
 /* The dots/bullets/indicators */
@@ -168,9 +144,4 @@ img {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.captiontext {font-size: 11px}
 }
